--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -97,5 +97,9 @@
     <string name="gesture_playback_control_screen_title">Playback control</string>
     <string name="gesture_playback_control_title">When the screen is off, long-pressing the volume keys will seek music tracks</string>
     <string name="volume_rocker_music_controls_delay_title">Playback control activation delay</string>
+    
+    <!-- Notch: Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
 
 </resources>
